--- a/book/content/Appendix_6_Software.ipynb
+++ b/book/content/Appendix_6_Software.ipynb
@@ -7,7 +7,7 @@
     "id": "4qWQztXQAm4K"
    },
    "source": [
-    "# 6 Software\n",
+    "# Appendix 6 Software\n",
     "\n",
     "By now, you are almost ready to start conducting legal network analysis yourself. But what software to use? There are essentially three options: \n",
     "1. Network analysis software designed for a specific purpose.\n",
