--- a/book/content/Chapter_1_Introduction.ipynb
+++ b/book/content/Chapter_1_Introduction.ipynb
@@ -73,29 +73,29 @@
     "\n",
     "While graph theory is an abstract domain of mathematics, network analysis is a method that can be more directly applied to research in other disciplines. \n",
     "\n",
-    "The development of network analysis as an empirical offshoot of graph theory is a more recent phenomenon. Unlike the case of Euler, it is not possible to pinpoint a single author that launched network analysis, but the work of Freeman (xxxx) provides various examples of early works using the network method. Some notable examples include:\n",
+    "The development of network analysis as an empirical offshoot of graph theory is a more recent phenomenon. Unlike the case of Euler, it is not possible to pinpoint a single author that launched network analysis, but the work of Freeman (2004) provides various examples of early works using the network method. Some notable examples include:\n",
     "\n",
-    "* John Atkinson Hobson using a (bipartite) network methodology to identify \"ring\" relationships between South African companies. \n",
+    "* John Atkinson Hobson (1884/1954) using a (bipartite) network methodology to identify \"ring\" relationships between South African companies. \n",
     "\n",
-    "* Psychologists such as Almack and ____ captured relationships between children using methods that would become standard in network analysis. For example, they identified ties between children that frequently played together.\n",
+    "* Psychologists such as Almack (1922), Bott (1957) and Wellman (1926) captured relationships between children using methods that would become standard in network analysis. For example, they identified ties between children that frequently played together.\n",
     "\n",
-    "* Lewis Henry Morgan captured Roman kinship data in a network structure and used symmetries in the structure to infer equivalences in kinship.\n",
+    "* Lewis Henry Morgan (1851/1997) captured Roman kinship data in a network structure and used symmetries in the structure to infer equivalences in kinship.\n",
     "\n",
-    "* Building on research on kinship relations, Galton and Watson developed a stochastic model of the disappearance of family names. This foreshadows the statistical approach that is evident in many network models.\n",
+    "* Building on research on kinship relations, Galton and Watson (1875) developed a stochastic model of the disappearance of family names. This foreshadows the statistical approach that is evident in many network models.\n",
     "\n",
-    "* Jacbob Levy Moreno and Hellen Jennings were interested the effects of human interactions beyond those interacting and their immediate group. He explicitly used the term \"network\" and made network schemas (sociograms) of various human associations. Freeman would  consider them the founders of network analysis. At that time, they called their methodological approach \"sociometry\"\n",
+    "* Jacbob Levy Moreno and Hellen Jennings (1938) were interested the effects of human interactions beyond those interacting and their immediate group. He explicitly used the term \"network\" and made network schemas (sociograms) of various human associations. Freeman would  consider them the founders of network analysis. At that time, they called their methodological approach \"sociometry\"\n",
     "\n",
-    "* Luce and Perry formalized the defintion of a clique.\n",
+    "* Luce and Perry (1949) formalized the defintion of a clique.\n",
     "\n",
-    "* Paul Edros and Alfred Rényi developed a random grahph model known as the Edros-Rényi graph. This graph or a variant thereof is often used today as a \"null model\" or a baseline for researchers that want to test particular hypotheses about network structure in ERGM research.\n",
+    "* Paul Edros and Alfred Rényi (1959, 1960) developed a random grahph model known as the Edros-Rényi graph. This graph or a variant thereof is often used today as a \"null model\" or a baseline for researchers that want to test particular hypotheses about network structure in ERGM research.\n",
     "\n",
-    "* Alex Bavelas provided a formal model for centrality, and identified a variety of classic network relations (xxxx) that are still used today as varaibles in ERGM research.\n",
+    "* Alex Bavelas (1948) provided a formal model for centrality, and identified a variety of classic network relations that are still used today as varaibles in ERGM research.\n",
     "\n",
-    "* Eminent statistician Paul Lazarsfeld and eminent sociologist Robert Merton would collaborate to train PhD students who had the requisite skills to advance social network research. Students such as Blau, Katz, Coleman and Menzel would make critical contributions to the field.\n",
+    "* Eminent statistician Paul Lazarsfeld and eminent sociologist Robert Merton would collaborate to train PhD students who had the requisite skills to advance social network research (see Lazarsfeld 1998). Students such as Blau, Katz, Coleman and Menzel would make critical contributions to the field.\n",
     "\n",
-    "* From a modern perspective, it is necessary to include the development of software that makes the analysis  large networks possible. An example of early software is Pajek.\n",
+    "* From a modern perspective, it is necessary to include the development of software that makes the analysis  large networks possible. An example of early software is Pajek (see Batagelj & Mrvar, 1998).\n",
     "\n",
-    "* Network visualization depends on the existence of algorithms that can organize network data on a 2d plane in a way that makes sense for human cognition. An example of note is the Kamada-Kawai Layout, that draws more highly connected notes closer together, and less highly connected notes are drawn further apart.\n",
+    "* Network visualization depends on the existence of algorithms that can organize network data on a 2d plane in a way that makes sense for human cognition. An example of note is the Kamada-Kawai Layout, that draws more highly connected notes closer together, and less highly connected notes are drawn further apart (see Kamada & Kawai, 1998).\n",
     "\n",
     "* The University of California Irvine has had a pivotal role in the maturation of the field of network analysis, becoming a hub for scholars and conferences. Here we want to highlight its role in providing easy access to network data at the [UCI Network Data Repository](https://networkdata.ics.uci.edu)\n",
     "\n",
