--- a/book/content/Chapter_1_Introduction.ipynb
+++ b/book/content/Chapter_1_Introduction.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "## 1.1 What Is Network Analysis?\n",
     "\n",
-    "The purpose of this book is to introduce law students with some technical skills (or the willingness to learn them) to the method of network analysis. Network analysis can be seen as an applied or empirical offshoot of graph theory, which can be used to study relationships between entities. Talk about entities and relationships is now necessarily vague because, as a method, network analysis can be applied to a wide variety of situations. For example, in a study of how a virues spreads entities can be patients, and relationships represent contagions. In a study of academic citations, entities can be articles and relations can be citations. In a criminal network, entities can be suspects and relationships financial transfers. In a social network, illustrated below, entities can be persons (or online profiles) and relations friendship links.\n",
+    "The purpose of this book is to introduce law students with some technical skills (or the willingness to learn them) to the method of network analysis. Network analysis can be seen as an applied or empirical offshoot of graph theory, which can be used to study relationships between entities. Talk about entities and relationships is now necessarily vague because, as a method, network analysis can be applied to a wide variety of situations. For example, in a study of how a viruses spreads entities can be patients, and relationships represent contagions. In a study of academic citations, entities can be articles and relations can be citations. In a criminal network, entities can be suspects and relationships financial transfers. In a social network, illustrated below, entities can be persons (or online profiles) and relations friendship links.\n",
     "\n",
     "<em>Figure 1: Example of social media network</em>\n",
     "\n",
@@ -60,7 +60,7 @@
     "\n",
     "<font size=\"2\">Source: Wikipedia</font>\n",
     "\n",
-    "Euler demonstrated that the 'Seven Bridges of Königsberg' problem does not have a solution. The possibility of having a walk through town while crossing every bridge exactly once, depends on the number land areas (mainland + islands) and on the number of bridges. Euler proved that the desired walk (now knwon as an \"Eulerian path\") could only take place if the land areas are connected and include exactly zero or two areas with an odd number of bridges. Königsberg had four land areas and seven bridges at the time, making it impossible to make an Eulerian path through it.\n",
+    "Euler demonstrated that the 'Seven Bridges of Königsberg' problem does not have a solution. The possibility of having a walk through town while crossing every bridge exactly once, depends on the number land areas (mainland + islands) and on the number of bridges. Euler proved that the desired walk (now known as an \"Eulerian path\") could only take place if the land areas are connected and include exactly zero or two areas with an odd number of bridges. Königsberg had four land areas and seven bridges at the time, making it impossible to make an Eulerian path through it.\n",
     "\n",
     "The seven bridges were bombed in World War II. Five bridges were rebuilt. A Eulerian path through the bridges became possible after the reconstruction (in the figure below: 1->2->3->4->5). Now, two land areas (in the figure below: B+C) have two bridges, whereas the other two land areas (in the figure below: A+D) have three bridges. This means that there are exactly two land areas with an odd number of bridges.\n",
     "\n",
@@ -85,11 +85,11 @@
     "\n",
     "* Jacbob Levy Moreno and Hellen Jennings (1938) were interested the effects of human interactions beyond those interacting and their immediate group. He explicitly used the term \"network\" and made network schemas (sociograms) of various human associations. Freeman would  consider them the founders of network analysis. At that time, they called their methodological approach \"sociometry\"\n",
     "\n",
-    "* Luce and Perry (1949) formalized the defintion of a clique.\n",
+    "* Luce and Perry (1949) formalized the definition of a clique.\n",
     "\n",
-    "* Paul Edros and Alfred Rényi (1959, 1960) developed a random grahph model known as the Edros-Rényi graph. This graph or a variant thereof is often used today as a \"null model\" or a baseline for researchers that want to test particular hypotheses about network structure in ERGM research.\n",
+    "* Paul Edros and Alfred Rényi (1959, 1960) developed a random graph model known as the Edros-Rényi graph. This graph or a variant thereof is often used today as a \"null model\" or a baseline for researchers that want to test particular hypotheses about network structure in ERGM research.\n",
     "\n",
-    "* Alex Bavelas (1948) provided a formal model for centrality, and identified a variety of classic network relations that are still used today as varaibles in ERGM research.\n",
+    "* Alex Bavelas (1948) provided a formal model for centrality, and identified a variety of classic network relations that are still used today as variables in ERGM research.\n",
     "\n",
     "* Eminent statistician Paul Lazarsfeld and eminent sociologist Robert Merton would collaborate to train PhD students who had the requisite skills to advance social network research (see Lazarsfeld 1998). Students such as Blau, Katz, Coleman and Menzel would make critical contributions to the field.\n",
     "\n",
@@ -118,7 +118,7 @@
     "\n",
     "* In [\"*Precedent in International Courts: A Network Analysis of Case Citations by the European Court of Human Rights*\"](https://doi.org/10.1017/S0007123411000433) Lupu and Voeten analyzed 7,319 European Court of Human Rights (ECtHR) judgments up to and including 2006. Among other things, the authors were interested in the question of whether the judgments could be grouped based on substantive reasons (as opposed to the judgments being grouped based on, for instance, the respondent country). The authors found that the different communities consisted of different topics. For instance, one community consisted of judgments with the keywords 'life', 'effective remedy', 'positive obligation', and 'inhuman treatment', whereas other communities concerned procedural matters ('fair hearing', 'lawful arrest or detention', 'reasonable time') or fundamental freedoms ('freedom of expression', 'necessary in a democratic society', 'protection of the rights of others', 'respect for private life') (see Lupu & Voeten 2011). \n",
     "\n",
-    "* In [\"*Spreading and Shifting Costs of Lateral Control Among Peers: A Structural Analysis at the Individual Level*](https://doi.org/10.1023/A:1004759418226), Lazega and Krackhardt used network analysis in order to understand the complex dynamics taking palce within a firm. The authors studied a corporate law firm with 71 lawyers (36 partners and 35 associates) in three offices. Their work provided perspectives on how partners foster cooperation, resolve conflicts, and preserve institutional stability. The study identified different leverage styles employed by partners, reflecting varying levels of seniority and approaches to managing control costs (see Lazega & Krackhardt 2000). \n",
+    "* In [\"*Spreading and Shifting Costs of Lateral Control Among Peers: A Structural Analysis at the Individual Level*](https://doi.org/10.1023/A:1004759418226), Lazega and Krackhardt used network analysis in order to understand the complex dynamics taking place within a firm. The authors studied a corporate law firm with 71 lawyers (36 partners and 35 associates) in three offices. Their work provided perspectives on how partners foster cooperation, resolve conflicts, and preserve institutional stability. The study identified different leverage styles employed by partners, reflecting varying levels of seniority and approaches to managing control costs (see Lazega & Krackhardt 2000). \n",
     "\n",
     "* Network analysis can also be used for intelligence and criminal investigations. One may identify central members and their roles in the network or map interactions between entities in the network. Different entities may be connected, for instance, individuals and addresses, addresses and crime locations, individuals and organizations, individuals and individuals (through communication), and crimes and crime features. This way, certain types of crimes may be clustered and connected to certain individuals, organizations, or types of individuals and organizations. For an example of this type of research see Seidler and Adderley's [\"*Criminal Network Analysis inside Law Enforcement Agencies: A Data-Mining System Approach under the National Intelligence Model*\"](https://doi.org/10.1350/ijps.2013.15.4.321) (see Siedler & Adderley 2013).\n",
     "\n",
@@ -148,7 +148,7 @@
     "\n",
     "## 1.4 Relational data\n",
     "\n",
-    "Network analysis excells at dealing with relational data. In traditional quantitative methods, data represents (or is supposed to represent) independent observations. Consider the table below:\n",
+    "Network analysis excels at dealing with relational data. In traditional quantitative methods, data represents (or is supposed to represent) independent observations. Consider the table below:\n",
     "\n",
     "| Student Name | Country of Origin | Age | Grade |\n",
     "|:-------------|:------------------|:----:|-------:|\n",
@@ -170,7 +170,7 @@
     "| Oxford Circus | Central London | Bakerloo, Central, Victoria                        | Yes                |\n",
     "| Tottenham Court Road | Central London | Central, Piccadilly                                | Yes                |\n",
     "\n",
-    "Westmister is not reachable from King's Cross. However, the addition of a new subway station (say St Pancras) may render other other stations \"reachable\", and thus modify the variables of pre-existing observations. Networks (or graphs) as a data structure are viable for representing such, dependent, relational data points.\n",
+    "Westmister is not reachable from King's Cross. However, the addition of a new subway station (say St Pancras) may render other stations \"reachable\", and thus modify the variables of pre-existing observations. Networks (or graphs) as a data structure are viable for representing such, dependent, relational data points.\n",
     "\n",
     "A jurist quickly realize that data in law is often relational. The meaning of one statue may depend on the meaning of other relevant statutes. The validity of a precedent may depend on other precedents. Correct legal judgment implies being sensitive to how new facts change the significance of facts that came before: breaking and entering into a property is normally trespass, but should not be so regarded if it is the only way to save oneself from a storm (cfr. Vermont Supreme Court, Ploof v. Putnam, 81 Vt. 471). Taking an analogy from chess, if fidelity to the sources of law represents the King in Law (if you disregard it, you lose or forfeit the game), it cannot be doubted that context is Queen"
    ]
@@ -180,9 +180,9 @@
    "id": "ebfda6d1998f4566",
    "metadata": {},
    "source": [
-    "## 1.5 Bridging the qualitative quantiative divide\n",
+    "## 1.5 Bridging the qualitative quantitative divide\n",
     "\n",
-    "One final point of interest is that network analysis can create useful linkages between qualitative and quantitative research methods. We must take the labels \"quantaitive\" and \"qualitative\" with a grain of salt. The contrast is misleading: quantitative analysis requires qualitative judgment, and quantitative methods can be used to model qualitative relationships, etc. Such caveats notwithstanding the explanation that follows aligns with way these terms are commonly used.\n",
+    "One final point of interest is that network analysis can create useful linkages between qualitative and quantitative research methods. We must take the labels \"quantitative\" and \"qualitative\" with a grain of salt. The contrast is misleading: quantitative analysis requires qualitative judgment, and quantitative methods can be used to model qualitative relationships, etc. Such caveats notwithstanding the explanation that follows aligns with way these terms are commonly used.\n",
     "\n",
     "Purely qualitative data can be subject to network analysis. How this can be done is illustrated in Chapter 6 of this textbook. The central point is that qualitative judgments about different entities (documents, cases, articles of legislation, discourses) can be used to relate these entities and thus form a network. Once the network is formed, network analysis algorithms can (as those introduced in Chapters 3 and 4) can be used to find relationships between these entities. These relationships are \"quantitative\", in the sense that they produce numerical rankings or orderings, and can even be given statistical estimates such as confidence intervals (possibly through bootstrap methods, see for example Gel et al 2017).\n",
     "\n",
@@ -196,7 +196,7 @@
    "source": [
     "## 1.6 Recurring examples.\n",
     "\n",
-    "In this book, we use a variety of examples to explain key concepts of legal network analysis. These include classic examples, which depart from legal research, but are useful in order to introduce key concepts and algorithms. These classic examples include the Krackhardt Kite graph which is purely conceptual in nature, and the Zachary Karate Club network and Florentine Families marriages network, which are classics of social resaerch using network analysis.\n",
+    "In this book, we use a variety of examples to explain key concepts of legal network analysis. These include classic examples, which depart from legal research, but are useful in order to introduce key concepts and algorithms. These classic examples include the Krackhardt Kite graph which is purely conceptual in nature, and the Zachary Karate Club network and Florentine Families marriages network, which are classics of social research using network analysis.\n",
     "\n",
     "For legal research, we will be relying heavily on a network of drone laws used in the study \"Retrieving relevant EU drone legislation with citation analysis\" by [van Dijck, On, Snel and Nanda (2023)](https://www.mdpi.com/2504-446X/7/8/490). In this study, network analysis was used as a way to help retrieve the EU legislation that is relevant for regulating the use of unmanned aerial vehicles, or drones. The use network analysis for the purpose of data retrieval is novel and promising. It provides an alternative to logic based (boolean) and NLP based (text-similarity) data retrieval.\n",
     "\n",
