--- a/book/content/Chapter_2_Key_Concepts.ipynb
+++ b/book/content/Chapter_2_Key_Concepts.ipynb
@@ -365,11 +365,11 @@
     "\n",
     "Another special type of graph is a directed acyclic graph or DAG. A DAG is a directed graph that has no cycles or loops, hence it is 'acyclic'.\n",
     "\n",
-    "Citation networks, which are often used in legal network analysis, should in theory be DAGs. Newer cases will cite older cases and not the other way around. Likewise, cases should not cite themselves. As a result, there should in theory be no loops in case citation networks. In practice, however, this does not always hold. Loops may occur, for instance in two cases written around the same time, where the drafters of each case had knowledge of the existance of the other case. The cases then are published in different dates, in a way that does not reflect the fact that they were written contemporaneusly.\n",
+    "Citation networks, which are often used in legal network analysis, should in theory be DAGs. Newer cases will cite older cases and not the other way around. Likewise, cases should not cite themselves. As a result, there should in theory be no loops in case citation networks. In practice, however, this does not always hold. Loops may occur, for instance in two cases written around the same time, where the drafters of each case had knowledge of the existence of the other case. The cases then are published in different dates, in a way that does not reflect the fact that they were written contemporaneously.\n",
     "\n",
     "Our drone legislation example is also a DAG. It is directed, because one law cites another, it is acyclic, because more recent legislation cites less recent legislation and not the other way around, and it is a graph that consists of nodes and edges.\n",
     "\n",
-    "DAGs are particularly important in the modeling of causal processes, on the understanding that causation is always linear and undirectional. To illustrate, we draw a toy example of a casual model that predicts a country will ratify a free trade treaty if the country is democratic, has a liberal government, has high unemployment, and a high percentage of young citizens. The supposed effect in htis model is directional and not cyclic (once the free trade treaty is ratified, this does not, in turn, make it more likely that democracy will prevail). This work does not delve further into DAGs as such."
+    "DAGs are particularly important in the modeling of causal processes, on the understanding that causation is always linear and undirectional. To illustrate, we draw a toy example of a casual model that predicts a country will ratify a free trade treaty if the country is democratic, has a liberal government, has high unemployment, and a high percentage of young citizens. The supposed effect in this model is directional and not cyclic (once the free trade treaty is ratified, this does not, in turn, make it more likely that democracy will prevail). This work does not delve further into DAGs as such."
    ]
   },
   {
@@ -467,11 +467,11 @@
     "\n",
     "Graphs and networks are sometimes used interchangeably. However, the terms point to different aspects of the graph structure and to different fields of study. \n",
     "\n",
-    "At the graph level, it is irrelevant wether the nodes and edges represent friendship relations, connections between subway stations, or participation in a criminal organization. The focus is on the nodes and edges are considered abstractly. Graph theory is a field of mathematics that explores the abstract properties of graphs.\n",
+    "At the graph level, it is irrelevant whether the nodes and edges represent friendship relations, connections between subway stations, or participation in a criminal organization. The focus is on the nodes and edges are considered abstractly. Graph theory is a field of mathematics that explores the abstract properties of graphs.\n",
     "\n",
     "Networks are based on graphs (hence on nodes and edges), but they are used to study concrete relationships between entities: treaty ratifications by states, citations between court cases, similarity between documents, etc. Moreover, the nodes and edges can be enriched with even more information (which may be called metadata, see Chapter 2, sections 5 and 6). For example, if nodes consist of documents, a network might record the language of the documents, the name of the authors, the year of publication, etc.\n",
     "\n",
-    "Moreover graphs are tipically small, and are inspected through formal mathematical means. By contrast, networks are tipically large (what large means can vary from hundreds, thousands, millions of connections or more, depending on the what the network models) and are inspected through statistics or algorithms.\n"
+    "Moreover graphs are typically small, and are inspected through formal mathematical means. By contrast, networks are typically large (what large means can vary from hundreds, thousands, millions of connections or more, depending on the what the network models) and are inspected through statistics or algorithms.\n"
    ]
   },
   {
@@ -483,7 +483,7 @@
    "source": [
     "## 2.9 Power Law Distribution\n",
     "\n",
-    "Connections in networks tipically follow a power law distribution. A power law distribution entails that the frequency distributions of network connections is highly skewed. For example, it is common in legal network analysis, particularly the analysis of citation networks, that a few nodes have a very high number of citations and most nodes a small number citations. \n",
+    "Connections in networks typically follow a power law distribution. A power law distribution entails that the frequency distributions of network connections is highly skewed. For example, it is common in legal network analysis, particularly the analysis of citation networks, that a few nodes have a very high number of citations and most nodes a small number citations. \n",
     "\n",
     "We illustrate this by means of a network of  Court of Justice of the European Union (CJEU) case law, where the source nodes consist of cases that are labeled as 'consumer protection'. With source nodes, we mean the cases that were searched and for which the citations in those cases were harvested. In this network, the cases are the nodes and the references in and to the cases the edges. The network consists of 1,614 nodes (cases) and 2,662 edges (references).\n",
     "\n",
@@ -996,14 +996,14 @@
     "\n",
     "An edge can show that there is a relationship between nodes A and B. The nature of that relationship can be many things, such as there being a train between A and B, or that case A cites case B. In these instances the relationship is binary: There either is a connection or there is not.\n",
     "\n",
-    "However, there is a range of situation where one wants to record the strength of a connection and not just its presence. For example, one might want to record not only that there is train path from A to B but also how long that path is in terms of kilometers. We might want to score not only that case A cites case B but also how many times case B is cited by case A. We can add this attribute to the edge by giving weights to edges. For instance, if case A cites case B four times, the edge weight becomes four.\n",
+    "However, there is a range of situation where one wants to record the strength of a connection and not just its presence. For example, one might want to record not only that there is train path from A to B but also how long that path is in terms of kilometres. We might want to score not only that case A cites case B but also how many times case B is cited by case A. We can add this attribute to the edge by giving weights to edges. For instance, if case A cites case B four times, the edge weight becomes four.\n",
     "\n",
     "Weighted networks can be represented visually in an intuitive way by using different colors or line styles for their edges. Below is a network using a document similarity matrix. This matrix records how close two documents are in light of the tokens they share (Jaccard distance) and scores them with 1 if they are identical, and 0 if they are completely different. It is made of a set of ECHR Grand Chamber judgments on the extraterritorial application of fundamental rights.\n",
     "In the process of comparing the distance between each document, this dataframe is turned into a matrix, and that can be used to build a network. Please see Appendix 1: \"Text Similarity Networks\" for more details of how this can be done.\n",
     "\n",
     "The purpose of this example is to show that if you graph the network without consideration of weight, it gives you a fully connected network, which is a nice geometrical figure, but not very informative. Every document was compared to every other document, so every node is on step (one degree) of separation from every other and so every node has the exact same number of neighbors.\n",
     "\n",
-    "A more informative network structure can be shown if we take consideration of weight. One way to do this is to pick only the edges whose weight meets a certain test. Here we are simply whose weight surpases the mean weight plus one standard deviation."
+    "A more informative network structure can be shown if we take consideration of weight. One way to do this is to pick only the edges whose weight meets a certain test. Here we are simply whose weight surpasses the mean weight plus one standard deviation."
    ]
   },
   {
