--- a/book/content/Chapter_3_Centrality.ipynb
+++ b/book/content/Chapter_3_Centrality.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "As already noted in Chapter 1, we can be interested in determining which nodes of a network are more important, more popular, or better connected. For instance, in the drone legislation example, we might be interested to measure which laws are frequently cited or citing other laws. Network centrality measures aim to retrieve this information. \n",
     "\n",
-    "There are a variety of network centrality measures, and although they often overlap, they capture different ways in which a node may be regarded as central. Which centrality measure to use, depends on the research question one is interested in, domain knowledge, and sensitivity to context. When finding relevant drone laws, the direction of the citatations from one law to another may not matter so much, whereas in a network of case law this will be essential. \n",
+    "There are a variety of network centrality measures, and although they often overlap, they capture different ways in which a node may be regarded as central. Which centrality measure to use, depends on the research question one is interested in, domain knowledge, and sensitivity to context. When finding relevant drone laws, the direction of the citations from one law to another may not matter so much, whereas in a network of case law this will be essential. \n",
     "\n",
     "The presentation that follows will show various centrality measures ranging from some very intuitive ones like degree centrality, to some more complex measures like Pagerank and HITS. The mathematics involved in the measures can become complicated for readers with a background in the humanities. Fortunately, the computer will take care of some otherwise intractable calculations allowing us to focus on the concepts. \n",
     "\n",
@@ -1605,7 +1605,7 @@
     "id": "nN3I1AID6j_h"
    },
    "source": [
-    "The only real difficulty in closeness centrality is getting the shortest paths. While this is a non-trivial and computationally expensive task, from the user persepctive, a machine can calculate shortest paths for us. Let us use a machine to try to unpack the algorithm. Here we get the number of steps from node 8 to every other node."
+    "The only real difficulty in closeness centrality is getting the shortest paths. While this is a non-trivial and computationally expensive task, from the user perspective, a machine can calculate shortest paths for us. Let us use a machine to try to unpack the algorithm. Here we get the number of steps from node 8 to every other node."
    ]
   },
   {
@@ -1678,7 +1678,7 @@
    "id": "4716fd7b",
    "metadata": {},
    "source": [
-    "We can perform a similar operation for our drone legislation network we used previously. We first visuallly compare normalized degree centrality with normalized closeness centrality. We observe quite some differences in rankings between the two measures:"
+    "We can perform a similar operation for our drone legislation network we used previously. We first visually compare normalized degree centrality with normalized closeness centrality. We observe quite some differences in rankings between the two measures:"
    ]
   },
   {
@@ -2687,7 +2687,7 @@
     "\n",
     "$$ v_{i+1}:= Av_{i} $$\n",
     "\n",
-    "This is done for values of $ i = {1, 2, 3, 4, ...} $ until it is the case that the values of $ v $ do not change from multiplication to multiplication. We may express this as an approximate equality because one may be satisfied with very small variations in the score of v, instead of requiring it to be be exactly the same.\n",
+    "This is done for values of $ i = {1, 2, 3, 4, ...} $ until it is the case that the values of $ v $ do not change from multiplication to multiplication. We may express this as an approximate equality because one may be satisfied with very small variations in the score of v, instead of requiring it to be exactly the same.\n",
     "\n",
     "$$ v_{i+1} \\approx v_{i} $$\n",
     "\n",
@@ -4974,7 +4974,7 @@
    "id": "5b389105",
    "metadata": {},
    "source": [
-    "To illustrate the broker function the nodes fulfill with a high betweenness centrality score, we compare two networks: one with all the nodes and one where the 10 nodes with the highest betweenness centrality score are removed. It becomes clear how disconnected and less dense the network becomes when removing nodes with high betweenness centrality."
+    "To illustrate the broker function the nodes fulfil with a high betweenness centrality score, we compare two networks: one with all the nodes and one where the 10 nodes with the highest betweenness centrality score are removed. It becomes clear how disconnected and less dense the network becomes when removing nodes with high betweenness centrality."
    ]
   },
   {
@@ -5646,7 +5646,7 @@
    "id": "8b5ee9ee-aeb8-498f-a4ea-6a99728b217b",
    "metadata": {},
    "source": [
-    "Now let's get the hubs scores. For these we are going to first get a matrix N that is produced by multiplying the adjacency matrix by itself tranposed (if you think of multiplication in algebra, this procedure may appear identical to the one we used to get the matrix M. Multiplication is normally commutative, that is to say $ 3 \\times 4 $ is the same as $ 4 \\times 3 $ However matrix multiplication is not commutative and the resulting matrix is different. \n",
+    "Now let's get the hubs scores. For these we are going to first get a matrix N that is produced by multiplying the adjacency matrix by itself transposed (if you think of multiplication in algebra, this procedure may appear identical to the one we used to get the matrix M. Multiplication is normally commutative, that is to say $ 3 \\times 4 $ is the same as $ 4 \\times 3 $ However matrix multiplication is not commutative and the resulting matrix is different. \n",
     "\n",
     "$$ N = Ad \\times Ad^T $$\n",
     "\n",
@@ -5964,7 +5964,7 @@
     "\n",
     "After normalization these correspond exactly to our normalized authority score. \n",
     "\n",
-    "Now if we scale these results by the adjacency matrix of the graph and normalize, we get the normlaized hubs scores. And through a different path end up in the same place."
+    "Now if we scale these results by the adjacency matrix of the graph and normalize, we get the normalized hubs scores. And through a different path end up in the same place."
    ]
   },
   {
