--- a/book/content/Chapter_4_Communities.ipynb
+++ b/book/content/Chapter_4_Communities.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "Networks can be highly complex, often spanning hundreds, thousands, or even millions of nodes. One way of identifying possible patterns within such complexity is grouping nodes together in clusters or communities. Depending on the domain, theme, or topic being researched, clustering nodes can reveal actors that interact more closely with each other, documents that are more similar to each other, or precedents that frequently cite each other.\n",
     "\n",
-    "Consider a citation network of 20,000 cases. Community detection might allow finding cases that focus on the same legal problem, such as causation, fair trial, or duty of care. Once such communities are identified, centrality measures can reveal the most important cases for each grouping. Or perhaps one finds it useful to search for sub-communities within a chosen grouping. And adding a temporal dimension to the analysis might reveal how the law developed over time, with some groupings forming or unraveling as the jurisprudence develops."
+    "Consider a citation network of 20,000 cases. Community detection might allow finding cases that focus on the same legal problem, such as causation, fair trial, or duty of care. Once such communities are identified, centrality measures can reveal the most important cases for each grouping. Or perhaps one finds it useful to search for sub-communities within a chosen grouping. And adding a temporal dimension to the analysis might reveal how the law developed over time, with some groupings forming or unravelling as the jurisprudence develops."
    ]
   },
   {
@@ -86,11 +86,11 @@
    "source": [
     "## 4.1 Girvan-Newman\n",
     "\n",
-    "The Girvan-Newman method for partitioning of communities (Girvan and Newman, 2002) depends on the edge-betweenness property. We have covered node-betweenness in Chapter 3. Node-betweennes measures how many shortest paths between nodes $v$ and $w$ pass through a given node $n$. Edge-betweenness measures the same property, but for edges instead of nodes. The notation is as follows:\n",
+    "The Girvan-Newman method for partitioning of communities (Girvan and Newman, 2002) depends on the edge-betweenness property. We have covered node-betweenness in Chapter 3. Node-betweenness measures how many shortest paths between nodes $v$ and $w$ pass through a given node $n$. Edge-betweenness measures the same property, but for edges instead of nodes. The notation is as follows:\n",
     "\n",
     "$$ \\beta(e) = \\sum_{s, t \\in V} \\frac{\\sigma(s, t | e)}{ \\sigma(s, t)} $$\n",
     "\n",
-    "Where $\\beta(e)$ denotes the betweenness score for edge $e$, and $ \\sigma $ is a letter chosen to denote the shortest path function. Then $\\frac{\\sigma(s, t | e)}{ \\sigma(s, t)} $ is read as referring to the shortest paths between nodes $s$ and $t$ that pass through edge $e$, and the total number of shortest paths between $s$ and $t$. This operation is summed over every $s$, $t$ that belong to the set $V$ (that is, $\\sum_{s, t \\in V}$), which are nodes for which a shortest path between $s$ and $t$ is to be found. In edge-betweeenness centrality, this score can be normalized by multiplying it by $ 2 / (n(n-1) $. \n",
+    "Where $\\beta(e)$ denotes the betweenness score for edge $e$, and $ \\sigma $ is a letter chosen to denote the shortest path function. Then $\\frac{\\sigma(s, t | e)}{ \\sigma(s, t)} $ is read as referring to the shortest paths between nodes $s$ and $t$ that pass through edge $e$, and the total number of shortest paths between $s$ and $t$. This operation is summed over every $s$, $t$ that belong to the set $V$ (that is, $\\sum_{s, t \\in V}$), which are nodes for which a shortest path between $s$ and $t$ is to be found. In edge-betweenness centrality, this score can be normalized by multiplying it by $ 2 / (n(n-1) $. \n",
     "\n",
     "In practice, we can calculate edge-betweenness using the edge_betweenness_centrality function in NetworkX. This will provide a list of all the edges present in the network with their centrality score, as we can see below:"
    ]
@@ -216,7 +216,7 @@
    "source": [
     "The Girvan-Newman algorithm progressively removes the edge with the highest betweenness centrality score. This will eventually break down the graph, creating distinct disconnected components that will function as communities. In every new iteration in the process, the betweenness centrality for edges is recalculated. The calculation becomes progressively easier as more and more edges are removed.\n",
     "\n",
-    "In NetworkX this is impemented as an iterator, which can be run multiple times using the next() function. Running next() on the iterator will return the connected components of the graph as long as there is a reduction in the number of connected components. \n",
+    "In NetworkX this is implemented as an iterator, which can be run multiple times using the next() function. Running next() on the iterator will return the connected components of the graph as long as there is a reduction in the number of connected components. \n",
     "\n",
     "The results are shown below:"
    ]
@@ -471,7 +471,7 @@
    "id": "fef1c7ae-1ea1-4349-89bf-5c0ad770ddfa",
    "metadata": {},
    "source": [
-    "At any rate, the Girvan-Newman method requires support for determining the right stopping point, the right amount of communities in which to partition the network. This may be done through domain knowledge or through scores such as modularity or a combination of both, but it is outside the scope of this presentaion whose main purpose is to present the algorithm."
+    "At any rate, the Girvan-Newman method requires support for determining the right stopping point, the right amount of communities in which to partition the network. This may be done through domain knowledge or through scores such as modularity or a combination of both, but it is outside the scope of this presentation whose main purpose is to present the algorithm."
    ]
   },
   {
@@ -487,11 +487,11 @@
    "id": "98b541a7-aa18-4d06-a948-d99723dc6ed5",
    "metadata": {},
    "source": [
-    "Label propagation algorithms can best be understood as a contagion process that passes on labels or categories instead of illnesses: A nearby node has a chance to 'infect' its neighbors passing on its label. As the process goes on, one can observe how labels spread accross a population of nodes, perhaps stabilizing in a certain configuration.\n",
+    "Label propagation algorithms can best be understood as a contagion process that passes on labels or categories instead of illnesses: A nearby node has a chance to 'infect' its neighbors passing on its label. As the process goes on, one can observe how labels spread across a population of nodes, perhaps stabilizing in a certain configuration.\n",
     "\n",
-    "The idea of label propagation is most intuitive in semi-supervised learning. This is a scenario when one knows the labels of some nodes, but not of others, and a label infection process is simulated in order to see which nodes get infected with which labels. For example, consider a social network in which we know that some actors vote for the blue party, that some vote for the red party, but for the most part, we have no knoledge of the voting preferences of the actors. In this case, the actors for whom voting preferences are known are our labeled nodes and the ones for which we do not have information the unlabeled ones. We can try to estimate the voting preferences of unlabeled actors by allowing the 'votes blue' and 'votes red' label to spread to the nearby nodes, as if it were a virus, for a certain amount of time or until a certain condition is met. \n",
+    "The idea of label propagation is most intuitive in semi-supervised learning. This is a scenario when one knows the labels of some nodes, but not of others, and a label infection process is simulated in order to see which nodes get infected with which labels. For example, consider a social network in which we know that some actors vote for the blue party, that some vote for the red party, but for the most part, we have no knowledge of the voting preferences of the actors. In this case, the actors for whom voting preferences are known are our labeled nodes and the ones for which we do not have information the unlabeled ones. We can try to estimate the voting preferences of unlabeled actors by allowing the 'votes blue' and 'votes red' label to spread to the nearby nodes, as if it were a virus, for a certain amount of time or until a certain condition is met. \n",
     "\n",
-    "This type of problem is not the standard one of community detection because in this scenario we already know the classification of some nodes Label propagation communities is an application of label propagation where the setting is completely unsupervised. That is, we have no prior knowledge of the final categories or results that we want to achieve. So instead of having some nodes start of with a 'votes blue' label and a 'votes red' label or something to that effect, we start only with the positional information of the nodes and edges, and hope to identify meaningful groupings through the simulated contagion process. Because there are no initial labels, label propagation communities works slighlty different. It is necessary to first assume that every node has its own unique label. Then as labels spread to nearby nodes, some labels may start to dominate, giving us the desired result.\n",
+    "This type of problem is not the standard one of community detection because in this scenario we already know the classification of some nodes Label propagation communities is an application of label propagation where the setting is completely unsupervised. That is, we have no prior knowledge of the final categories or results that we want to achieve. So instead of having some nodes start of with a 'votes blue' label and a 'votes red' label or something to that effect, we start only with the positional information of the nodes and edges, and hope to identify meaningful groupings through the simulated contagion process. Because there are no initial labels, label propagation communities works slightly different. It is necessary to first assume that every node has its own unique label. Then as labels spread to nearby nodes, some labels may start to dominate, giving us the desired result.\n",
     "\n",
     "Label propagation communities can have significant elements of randomness. The exact outcome configuration may not be the same every time the algorithm runs. In some cases, label propagation communities may prove to be unstable as nodes trade labels back and forth endlessly. There are different versions of the algorithm which can minimize these problems. We will introduce the simplest version here. That being said, NetworkX does not use the simplest version. It uses a semi-synchronous version of label propagation communities introduced by Cordasco and Gargano (2011). This version will be explained further below."
    ]
@@ -927,7 +927,7 @@
     "$$ Q = \\sum_{c=1}^{n} \\left[ \\frac{\\Sigma A_c}{2m} - \\gamma \\frac{\\Sigma D_c^2}{2m^2}\\right] $$\n",
     "\n",
     "\n",
-    "We will focus on the second formula in our discussion. Here, the $ \\frac{1}{2m}$ has been multiplied accross the expression. This representation provides the most insight into what modularity measures:\n",
+    "We will focus on the second formula in our discussion. Here, the $ \\frac{1}{2m}$ has been multiplied across the expression. This representation provides the most insight into what modularity measures:\n",
     "\n",
     "* $ \\frac{\\Sigma A_c}{2m} $ represents the proportion of purely intra-community edges for a given community to the total number of edges ($m$). \n",
     ">The 2 in the denominator accounts for the fact that every edge has 2 nodes. Remember here that the adjacency matrix ($A$) simply records the connection that may exist between two nodes. Adding these up will result in a measure of how well connected a community is within itself.\n",
@@ -940,7 +940,7 @@
     "\n",
     "* The $ \\Sigma $ is a summation notation that states that the difference between ratios will be repeated for every hypothesized community and added up. The higher the ultimate summation, the better the community partition is.\n",
     "\n",
-    "The key to this formula is understanding that we have a difference (a subtraction) between two ratios representing the inter-community edges on the one side, and the edges that would occur if the nodes within the community were to be assigned partners randomly, within or outside of the community. If the proportion of inter-community edges is greter than random, we will have positive number which is considered indicative of a community being present."
+    "The key to this formula is understanding that we have a difference (a subtraction) between two ratios representing the inter-community edges on the one side, and the edges that would occur if the nodes within the community were to be assigned partners randomly, within or outside of the community. If the proportion of inter-community edges is greater than random, we will have positive number which is considered indicative of a community being present."
    ]
   },
   {
@@ -1325,7 +1325,7 @@
    "source": [
     "The Louvain community detection aims to find the distribution of communities that will give the highest modularity score, using a cumulative random search:\n",
     "\n",
-    "1. It will asume every node is a community and score the modularity.\n",
+    "1. It will assume every node is a community and score the modularity.\n",
     "2. It will assign every node to a community with one of its neighbors and score the modularity of the result.\n",
     "3. It will keep the assignment that gives the highest modularity score.\n",
     "4. The resulting communities will be treated as nodes.\n",
@@ -1669,7 +1669,7 @@
     "\n",
     "$$ \\Delta Q = \\left[ \\frac{\\Sigma A_c + K_{in}}{2m} - \\left(\\frac{\\Sigma D_c + K_{in}}{2m} \\right)^2\\right] - \\left[\\frac{\\Sigma A_c}{2m}-\\left(\\frac{\\Sigma D_c}{2m}\\right)^2 - \\left(\\frac{K_{in}}{2m}\\right)^2  \\right]   $$\n",
     "\n",
-    "This can be seen as the difference of two modulary scores. One (the left brackets) is the score with the node $K$ inserted into it and the the other (the right bracket) is the score with the node $K$ removed from it. It is added on the left and removed on the right to represent the delta, or the difference in modularity, when one community gains a node and another one loses it."
+    "This can be seen as the difference of two modulary scores. One (the left brackets) is the score with the node $K$ inserted into it and the other (the right bracket) is the score with the node $K$ removed from it. It is added on the left and removed on the right to represent the delta, or the difference in modularity, when one community gains a node and another one loses it."
    ]
   },
   {
