--- a/book/content/Appendix_1_Getting_data_in.ipynb
+++ b/book/content/Appendix_1_Getting_data_in.ipynb
@@ -54,7 +54,7 @@
    "id": "01acea4d-d0cc-4349-9c2b-088172930ef1",
    "metadata": {},
    "source": [
-    "Then we can read the csv file into a pandas dataframe. A csv file literally means \"comma separated values\". But really it does not have to be a comma. The delimiter separating the values can be something else. Excel defaults into using a semicolon, so we need to tell pandas taht the separator (\"sep\") is \";\"."
+    "Then we can read the csv file into a pandas dataframe. A csv file literally means \"comma separated values\". But really it does not have to be a comma. The delimiter separating the values can be something else. Excel defaults into using a semicolon, so we need to tell pandas that the separator (\"sep\") is \";\"."
    ]
   },
   {
@@ -417,7 +417,7 @@
    "source": [
     "## Working with node-edge lists\n",
     "\n",
-    "If you are working with node-edge lists, it is likely that the most reliable way to get data into networkX is through looping through the data structure. Lets see how this might look, going back do our dataframe of book reviews, which already has this format."
+    "If you are working with node-edge lists, it is likely that the most reliable way to get data into networkX is through looping through the data structure. Let us see how this might look, going back do our dataframe of book reviews, which already has this format."
    ]
   },
   {
